# arinova-chat

./: .dockerignore  .env.production.example  .gitignore  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/rust-server/: .env.example  Cargo.toml  Dockerfile  migration.sql  railway.toml  schema.sql  seed.sql  staging-migration-fix.sql
apps/rust-server/migrations/: add_accounts_system.sql  add_activity_dashboard_tables.sql  add_agent_memories.sql  add_attachment_dimensions.sql  add_community_wiki.sql  add_conversation_notes.sql  add_creator_api_keys.sql  add_kanban_tables.sql  add_memory_capsules.sql  add_notebooks.sql  add_reports.sql  add_skills.sql  add_user_quick_shortcuts.sql  agent_last_memory_extracted_at.sql  agent_listen_mode_v2.sql  agent_memory_watermarks.sql  agent_owner_protection.sql  agent_security_logs.sql  agent_telemetry_tables.sql  board_agent_permissions.sql  community_approval.sql  community_conversation.sql  community_display_name_unique.sql  community_official.sql  community_settings_phase2.sql  conversation_board_preference.sql  conversation_type_expand.sql  conversation_type_h2h_h2a.sql  fix_community_members_joined_at.sql  fix_skill_i18n_data.sql  fix_wiki_pages_community.sql  ip_whitelist.sql  ip_whitelist_unique.sql  kanban_auto_archive.sql  kanban_board_archive.sql  kanban_card_archive.sql  kanban_card_commits.sql  kanban_card_sharing.sql  lounge_full_features.sql  lounge_tables.sql  (+18 more)
apps/rust-server/src/: config.rs  lib.rs  main.rs
apps/rust-server/src/a2a/: client.rs
apps/rust-server/src/auth/: caller_identity.rs  middleware.rs  mod.rs  oauth.rs  password.rs  session.rs
apps/rust-server/src/db/: mod.rs  models.rs  redis.rs
apps/rust-server/src/routes/: accounts.rs  activity.rs  admin.rs  agent_health.rs  agent_hub.rs  agent_hub_chat.rs  agent_memories.rs  agent_messages.rs  agent_notebooks.rs  agent_notes.rs  agent_send.rs  agent_skills.rs  agent_uploads.rs  agents.rs  api_keys.rs  api_v1.rs  auth.rs  blocking.rs  community.rs  conversation_settings.rs  conversations.rs  creator.rs  dashboard.rs  developer.rs  docs.rs  expert_hub.rs  friends.rs  hud.rs  (+41 more)
apps/rust-server/tests/: agent_api_tests.rs  integration_tests.rs  unit_tests.rs
python/arinova-agent-sdk/: README.md  pyproject.toml
python/arinova-agent-sdk/arinova_agent/: __init__.py  client.py  types.py
(+860 files in other folders)
