[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arinova-agent-sdk"
version = "0.0.1"
description = "SDK for connecting AI agents to Arinova Chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]
keywords = ["arinova", "agent", "sdk", "websocket", "streaming", "ai"]

[project.urls]
Homepage = "https://github.com/arinova-ai/arinova-chat"

[tool.hatch.build.targets.wheel]
packages = ["arinova_agent"]
